# STCTest

./: CMakeLists.txt  ConfigBarChart.h  Ffile.h  Histogram.h  Statistic.h  VisualFunctions.h  main.cpp  test.txt
